ja/reference/1.1.0/command-line-tools/droonga-request/index.md
---
title: droonga-request
layout: ja
---

{% comment %}
##############################################
  THIS FILE IS AUTOMATICALLY GENERATED FROM
  "_po/ja/reference/1.1.0/command-line-tools/droonga-request/index.po"
  DO NOT EDIT THIS FILE MANUALLY!
##############################################
{% endcomment %}


* TOC
{:toc}

## 概要 {#abstract}

`droonga-request`は、任意のメッセージをDroongaクラスタに送り、レスポンスとして得られた結果を出力します。
このコマンドはDroonga Engineノードに対してDroongaネイティブのメッセージを直接送れます。


大量のメッセージを一気に送信したい場合は、[`droonga-send`コマンドの説明](../droonga-send/)も併せて参照して下さい。

## 使い方 {#usage}

### 基本的な使い方

例えば、`192.168.100.50`というDroonga Engineノードがあり、同一ネットワークセグメント内のコンピュータ`192.168.100.10`にログインしている場合、[`system.status`](../../commands/system/status/)コマンドのメッセージを送信するコマンド列は以下のようになります：

~~~
(on 192.168.100.10)
$ echo '{"type":"system.status"}' |
    droonga-request --host 192.168.100.50 --receiver-host 192.168.100.10
Elapsed time: 0.00900742
{
  "inReplyTo": "1430963525.9829412",
  "statusCode": 200,
  "type": "system.status.result",
  "body": {
    "nodes": {
      "node0:10031/droonga": {
        "status": "active"
      },
      "node1:10031/droonga": {
        "status": "active"
      }
    },
    "reporter": "node0:55329/droonga @ node0:10031/droonga"
  }
}
~~~

1行目はレスポンスを得るまでにかかった時間です。
後の行はレスポンスメッセージとして得られた内容です。

[メッセージの形式のリファレンス](../../message/)の説明にある通り、`id`、`date`、`dataset`の各フィールドはリクエストメッセージの必須フィールドです。
与えられたメッセージがそれらを持っていなかった場合、このコマンドは初期状態で、適切な値を推測または生成して補います。
実際に送信された補完後のメッセージを見るには、`--report-request`オプションを指定して下さい：

~~~
(on 192.168.100.10)
$ echo '{"type":"system.status"}' |
    droonga-request --report-request --host 192.168.100.50 --receiver-host 192.168.100.10
Request: {
  "type": "system.status",
  "dataset": "Default"
}
Elapsed time: 0.00900742
...
~~~

利用可能な全てのコマンドの一覧については、[コマンドリファレンス](../../commands/)を併せて参照して下さい。

### 他のコマンドとの連携

このメッセージは標準入力を通じて送信するメッセージを受け取れます。
上記の例のように、`echo`、`cat`、およびその他のコマンドをこのコマンドのための入力ソースとして利用できます。
例えば、[`drndump`](../drndump/)の出力もそのまま入力ソースとして利用できます：

~~~
(on 192.168.100.10)
$ drndump --host 192.168.100.50 --receiver-host 192.168.100.10 | \
    droonga-request --host 192.168.100.60 --receiver-host 192.168.100.10 \
    > /dev/null
~~~

### ファイルからの入力

テキストファイルを入力ソースとして使うこともできます。
このコマンドは以下のように、コマンドライン引数として指定されたファイルの内容を読み込んで利用します：

~~~
(on 192.168.100.10)
$ cat /tmp/message.json
{"type":"system.status"}
$ droonga-request --host 192.168.100.60 --receiver-host 192.168.100.10 /tmp/message.json
Elapsed time: 0.00900742
{
  "inReplyTo": "1430963525.9829412",
  "statusCode": 200,
  "type": "system.status.result",
  "body": {
    "nodes": {
      "node0:10031/droonga": {
        "status": "active"
      },
      "node1:10031/droonga": {
        "status": "active"
      }
    },
    "reporter": "node0:55329/droonga @ node0:10031/droonga"
  }
}
~~~

### 複数のメッセージを一度に送る

このコマンドは複数のメッセージを順番に送る事もできます。
複数メッセージの一括送信は、単に、複数のメッセージを入力として与えるだけで行えます：

~~~
(on 192.168.100.10)
$ echo '{"type":"system.status"} {"type":"system.statistics.object.count","body":{"output":["total"]}}' |
    droonga-request --host 192.168.100.50 --receiver-host 192.168.100.10
Elapsed time: 0.007365724
{
  "inReplyTo": "1430964599.844579",
  "statusCode": 200,
  "type": "system.status.result",
  "body": {
    "nodes": {
      "node0:10031/droonga": {
        "status": "active"
      },
      "node1:10031/droonga": {
        "status": "active"
      }
    },
    "reporter": "node0:55329/droonga @ node0:10031/droonga"
  }
}
Elapsed time: 0.014172429
{
  "inReplyTo": "1430964599.8521488",
  "statusCode": 200,
  "type": "system.statistics.object.count.result",
  "body": {
    "total": 549
  }
}
~~~

全てのレスポンスに伴う処理結果は、順番に標準出力に出力されます。

もちろん、以下のようにしてソースファイル内に複数のメッセージを含めることもできます：

~~~
(on 192.168.100.10)
$ cat /tmp/messages.jsons
{"type":"system.status"}
{"type":"system.statistics.object.count",
 "body":{"output":["total"]}}
$ droonga-request --host 192.168.100.60 --receiver-host 192.168.100.10 /tmp/messages.jsons
Elapsed time: 0.007365724
{
  "inReplyTo": "1430964599.844579",
  "statusCode": 200,
  "type": "system.status.result",
  "body": {
    "nodes": {
      "node0:10031/droonga": {
        "status": "active"
      },
      "node1:10031/droonga": {
        "status": "active"
      }
    },
    "reporter": "node0:55329/droonga @ node0:10031/droonga"
  }
}
Elapsed time: 0.014172429
{
  "inReplyTo": "1430964599.8521488",
  "statusCode": 200,
  "type": "system.statistics.object.count.result",
  "body": {
    "total": 549
  }
}
~~~


個々のリクエストは1つ前のリクエストに対するレスポンスが得られてから送られるため、大量のメッセージがある場合には非常に時間がかかります。
そのような場合のための代わりの選択肢としては[`droonga-send`コマンド](../droonga-send/)があります。


## パラメータ {#parameters}


`--host=NAME`
: メッセージの送信先となるEngineノードのホスト名。
  既定値は、コマンドを実行しているコンピュータ自身の推測されたホスト名です。

`--port=PORT`
: Engineノードとの通信に使うポート番号。
  既定値は`10031`です。

`--tag=TAG`
: Engineノードとの通信に使うタグ名。
  既定値は`droonga`です。

`--timeout=SECONDS`
: 応答がない接続を打ち切るまでの待ち時間（単位：秒）です。
  既定値は`1`です。

`--[no-]exit-on-response`
: レスポンスを1つ受け取った時点で終了するかどうか。
  既定の状態は、`--exit-on-response`が指定されている場合に等しいです。
  サブスクリプション型のコマンド（1つのリクエストに対して、遅れて複数のレスポンスが返ってくる）に対しては、しばらくの間接続を維持し続けるために`--no-exit-on-response`オプションを指定する必要があります。
  そうすると、Droonga Engineノード側から切断されるまでは接続を維持するようになります。

`--receiver-host=NAME`
: このコマンドを実行しているコンピュータのホスト名。
  既定値は、そのコンピュータのホスト名として推測される名前です。

`--[no-]report-request`
: 実際に送信されたリクエストのメッセージを報告するかどうか。
  既定の状態は、`--no-report-request`が指定されている場合に等しいです。
  実際に送られたメッセージを見るためには、`--report-request`オプションを手動で指定する必要があります。

`--[no-]report-elapsed-time`
: リクエストに対してレスポンスが得られるまでにかかった時間を報告するかどうか。
  既定の状態は、`--report-elapsed-time`が指定されている場合に等しいです。
  出力から`Elapsed time:`の行を消したい場合は、`--no-report-elapsed-time`オプションを手動で指定する必要があります。

`--default-dataset=NAME`
: メッセージの既定の送信先データセット名。
  既定値は`Default`です。

`--default-target-role=ROLE`
: メッセージを処理できるEngineノードの既定のロール。
  以下のいずれかを指定します:
  
  * `service-provider`:
    メッセージは、クラスタ内でサービスを提供中のノードで処理されます。
    データ抽出操作に関わるノードには、後から遅れてメッセージが伝搬します。
  * `absorb-source`:
    メッセージは、クラスタへのノード追加操作におけるデータコピー元となっているノードで処理されます。
    サービスを提供中のノード、並びにデータコピー先となっているノードへは、メッセージは伝搬しません。
  * `absorb-destination`:
    メッセージは、クラスタへのノード追加操作におけるデータコピー先となっているノードで処理されます。
    サービスを提供中のノード、並びにデータコピー元となっているノードへは、メッセージは伝搬しません。
  * `any`:
    メッセージは、`--host`で指定されたノードで処理されます。
  
  既定値は`any`です。

`--[no-]completion`
: 入力メッセージの必須フィールドを補完するかどうか。
  既定の状態は、`--completion`が指定されている場合に等しいです。
  （既定のフィールドが欠落した）壊れたメッセージを意図的に送りたい場合は、`--no-completion`オプションを手動で指定する必要があります。

`--[no-]validation`
: 入力メッセージの妥当性を検証するかどうか。
  既定の状態は、`--validation`が指定されている場合に等しいです。
  妥当でない内容のメッセージを意図的に送りたい場合は、`--no-validation`オプションを手動で指定する必要があります。

`--help`
: コマンドの使い方の説明を表示します。



## インストール方法 {#install}

このコマンドは、Rubygemsのパッケージ`droonga-client`の一部としてインストールされます。

~~~
# gem install droonga-client
~~~

